--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 Putential Outbreak/Temp/
 Putential Outbreak/Library/
-Putential Outbreak/Temp/UnityVS_obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
-Putential Outbreak/Temp/UnityVS_obj/Debug/CoreCompileInputs.cache
-Putential Outbreak/Temp/UnityTempFile-fdd8cb6cdbd437541be308a747fcc3cd
+*.meta
+*.meta
