--- a/Putential Outbreak/Putential Outbreak.csproj
+++ b/Putential Outbreak/Putential Outbreak.csproj
@@ -88,6 +88,8 @@
     <Compile Include="Assets\GoogleVR\Scripts\Audio\FmodGvrAudioRoom.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Item.cs" />
+    <Compile Include="Assets\Scripts\ItemHealthPack.cs" />
     <Compile Include="Assets\Scripts\Light Flicker.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\Weapon.cs" />
