--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Putential Outbreak/Library/ScriptAssemblies/Assembly-CSharp.dll.mdb
 Putential Outbreak/Library/InspectorExpandedItems.asset
 Putential Outbreak/Library/assetDatabase3
 Putential Outbreak/Assets/Textures/Floor/Concrete.png.meta
+Putential Outbreak/Library/shadercompiler-UnityShaderCompiler.exe0.log
