--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Putential Outbreak/Library/shadercompiler-UnityShaderCompiler.exe0.log
 Putential Outbreak/Library/assetDatabase3
 Putential Outbreak/Library/InspectorExpandedItems.asset
 Putential Outbreak/Library/shadercompiler-UnityShaderCompiler.exe0.log
+Putential Outbreak/Library/shadercompiler-UnityShaderCompiler.exe0.log
